--- a/index.html
+++ b/index.html
@@ -11,9 +11,24 @@
 <body>
     <div class="content">
         <div class="header">
-            <h1>PARROT CARD GAME</h1>
+        <h1>PARROT CARD GAME</h1>
         </div>
         <div class="cards-section">
+            <div class="card">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
             <div class="card">
                 <img src="./source/front.png" alt="green parrot">
             </div>
