--- a/index.html
+++ b/index.html
@@ -14,22 +14,46 @@
         <h1>PARROT CARD GAME</h1>
         </div>
         <div class="cards-section">
-            <div class="card">
+            <div class="card1 hidden">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card">
+            <div class="card2 hidden">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card">
+            <div class="card3 hidden">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card">
+            <div class="card4 hidden">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card">
+            <div class="card5 hidden">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card">
+            <div class="card6 hidden">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card7 hidden">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card8 hidden">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card9 hidden">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card10 hidden">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card11 hidden">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card12 hidden">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card13 hidden">
+                <img src="./source/front.png" alt="green parrot">
+            </div>
+            <div class="card14 hidden">
                 <img src="./source/front.png" alt="green parrot">
             </div>
         </div>
