--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>PARROT CARD GAME</h1>
         </div>
         <div class="cards-section">
-            <div class="card1 hidden">
+            <div class="card1 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
             <div class="card2 hidden">
