applying flipping cards (not done yet)

--- a/index.html
+++ b/index.html
@@ -17,43 +17,43 @@
             <div class="card1 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card2 hidden">
+            <div class="card2 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card3 hidden">
+            <div class="card3 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card4 hidden">
+            <div class="card4 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card5 hidden">
+            <div class="card5 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card6 hidden">
+            <div class="card6 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card7 hidden">
+            <div class="card7 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card8 hidden">
+            <div class="card8 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card9 hidden">
+            <div class="card9 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card10 hidden">
+            <div class="card10 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card11 hidden">
+            <div class="card11 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card12 hidden">
+            <div class="card12 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card13 hidden">
+            <div class="card13 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
-            <div class="card14 hidden">
+            <div class="card14 hidden" onclick="changeCard(this)">
                 <img src="./source/front.png" alt="green parrot">
             </div>
         </div>
