--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,47 +14,131 @@
         <h1>PARROT CARD GAME</h1>
         </div>
         <div class="cards-section">
-            <div class="card1 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="0" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card2 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="1" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card3 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="2" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card4 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="3" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card5 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="4" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card6 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="5" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card7 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="6" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card8 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="7" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card9 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="8" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card10 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="9" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card11 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="10" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card12 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="11" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card13 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="12" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
-            <div class="card14 hidden" onclick="changeCard(this)">
-                <img src="./source/front.png" alt="green parrot">
+            <div class="flip-card hidden" id="13" onclick="changeCard(this)">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="./source/front.png" alt="green parrot">
+                  </div>
+                  <div class="flip-card-back">
+                  </div>
+                </div>
             </div>
         </div>
     </div>
