timer feature and mobile layout fix

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="header">
         <h1>PARROT CARD GAME</h1>
         </div>
+        <div class="timer">
+            00:00
+        </div>
         <div class="cards-section">
             <div class="flip-card hidden" id="0" onclick="changeCard(this)">
                 <div class="flip-card-inner">
