--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./source/front.png" type="image/x-icon">
+    <title>Parrots Card Game</title>
 </head>
 <body>
     <div class="content">
